--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build project
         run: |
           cmake -S . -DCMAKE_BUILD_TYPE=Debug -B build
-          cmake --build build
+          cmake --build build --parallel $(nproc)
 
       - name: Run unit tests
         run: |
