--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,6 +2,8 @@ name: Checks
 
 on:
   pull_request:
+    branches:
+      - master
 
 jobs:
   build-and-test:
@@ -12,11 +14,13 @@ jobs:
       - uses: MarkusJx/googletest-installer@v1.1
 
       - name: Install Dependencies
-        run: sudo apt-get update && sudo apt-get install -y libcxxopts-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcxxopts-dev
 
       - name: Build project
         run: |
-          cmake -S . -DCMAKE_BUILD_TYPE=Debug -B build
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug
           cmake --build build --parallel $(nproc)
 
       - name: Run unit tests
@@ -24,13 +28,13 @@ jobs:
           cd build
           ctest -V --parallel $(nproc) 
 
-#  code-style:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#
-#      - name: Clang-format
-#        uses: jidicula/clang-format-action@v4.13.0
-#        with:
-#          clang-format-version: '18'
-#          check-path: '.'
+  code-style:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Clang-format
+        uses: jidicula/clang-format-action@v4.13.0
+        with:
+          clang-format-version: '18'
+          check-path: '.'
