--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,10 @@ add_library(qpiler_lib
         src/ast.cpp
         src/grouper.cpp
 )
+find_package(OpenMP)
+if (OpenMP_CXX_FOUND)
+    target_link_libraries(qpiler_lib PUBLIC OpenMP::OpenMP_CXX)
+endif()
 
 target_include_directories(qpiler_lib PUBLIC include)
 
@@ -53,6 +57,9 @@ set_target_properties(qpiler_lib PROPERTIES UNITY_BUILD ON)
 add_executable(qpiler src/main.cpp)
 
 target_link_libraries(qpiler PRIVATE qpiler_lib)
+if (OpenMP_CXX_FOUND)
+    target_link_libraries(qpiler PRIVATE OpenMP::OpenMP_CXX)
+endif()
 
 option(BUILD_TESTS "Build unit tests" ON)
 option(COVERAGE "Enable coverage reporting" OFF)
@@ -66,18 +73,21 @@ if (BUILD_TESTS)
 
     add_executable(unit_tests
             tests/main.cpp
-
             tests/reader_tests.cpp
-            tests/ast_tests.cpp
             tests/grouper_tests.cpp
+            tests/identify_tests.cpp
+            tests/ast_tests.cpp
     )
 
-    target_link_libraries(unit_tests
+    target_link_libraries(unit_tests PRIVATE
             qpiler_lib
             GTest::GTest
             GTest::Main
             Threads::Threads
     )
+    if (OpenMP_CXX_FOUND)
+        target_link_libraries(unit_tests PRIVATE OpenMP::OpenMP_CXX)
+    endif()
 
     enable_testing()
     add_test(NAME unit_tests COMMAND unit_tests)
