--- a/.github/workflows/html.yml
+++ b/.github/workflows/html.yml
@@ -1,4 +1,4 @@
-name: Docs & Coverage
+name: Deploy
 
 on:
   push:
@@ -47,6 +47,12 @@ jobs:
           name: codecov-umbrella
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
+
+      - name: Upload coverage to Codacy
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: build/coverage.info
 
       - name: Clean build
         run: rm -rf build/
