--- a/.github/workflows/html.yml
+++ b/.github/workflows/html.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'src/**/*.cpp'
+      - 'include/**/*.hpp'
+      - 'tests/**/*.cpp'
+      - 'readme.md'
 
   workflow_dispatch:
 
@@ -49,7 +54,7 @@ jobs:
           verbose: true
 
       - name: Upload coverage to Codacy
-        uses: codacy/codacy-coverage-reporter-action@v1.3.0
+        uses: codacy/codacy-coverage-reporter-action@a38818475bb21847788496e9f0fddaa4e84955ba
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: build/coverage.info
